kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: adebayo-web-service

spec:
  selector:
    app: adebayo-web

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
