kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: adebayo-web-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: adebayo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adebayo-web-service
            port:
              number: 80
